# NTFSKFC

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.in  README.man  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure~  libtool  ntfsplus-build.man  ntfsplus-features.man
.github/workflows/: c-cpp.yml
.snapshots/: .~lock.readme.md#
Documentation/filesystems/: ntfsplus.rst
Documentation/filesystems/ntfsplus/: DEVELOPMENT.rst  TROUBLESHOOTING.rst
autom4te.cache/: output.0  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.4
include/: Makefile  Makefile.am  Makefile.in  bitmap.h  dir.h  fsck.h  index.h  inode.h  lcnalloc.h  problem.h  runlist.h  support.h  volume.h
kernel/fs/ntfsplus/: .kernel_attrib.o.cmd  .kernel_cache.o.cmd  .kernel_compression.o.cmd  .kernel_inode.o.cmd  .kernel_logging.o.cmd  .kernel_mft.o.cmd  .kernel_runlist.o.cmd  .kernel_transaction.o.cmd  .kernel_utils.o.cmd  .kernel_volume.o.cmd  .modules.order.cmd  .ntfsplus.ko.cmd  .ntfsplus.mod.cmd  .ntfsplus.mod.o.cmd  .ntfsplus.o.cmd  .ntfsplus_main.o.cmd  Kconfig  Makefile  bitmap.h  dir.c  ea.h  file.c  index.c  inode.c  inode.h  kernel_attrib.c  kernel_attrib.h  kernel_cache.c  kernel_cache.h  kernel_compression.c  kernel_compression.h  kernel_inode.c  kernel_logging.c  kernel_logging.h  kernel_mft.c  kernel_mft.h  kernel_runlist.c  kernel_security.c  kernel_security.h  kernel_transaction.c  (+16 more)
libntfs/: Makefile  Makefile.am  Makefile.in  acls.c  attrib.c  bitmap.c  bootsect.c  compress.c  dir.c  ea.c  fsck.c  index.c  inode.c  lcnalloc.c  libntfs.la  libntfs_la-acls.lo  libntfs_la-attrib.lo  libntfs_la-attrlist.lo  libntfs_la-bitmap.lo  libntfs_la-bootsect.lo  libntfs_la-cache.lo  libntfs_la-collate.lo  libntfs_la-compat.lo  libntfs_la-compress.lo  libntfs_la-debug.lo  libntfs_la-device.lo  libntfs_la-dir.lo  libntfs_la-ea.lo  libntfs_la-efs.lo  libntfs_la-fsck.lo  libntfs_la-index.lo  libntfs_la-inode.lo  libntfs_la-ioctl.lo  libntfs_la-lcnalloc.lo  libntfs_la-lib_utils.lo  libntfs_la-logfile.lo  libntfs_la-logging.lo  libntfs_la-mft.lo  libntfs_la-misc.lo  libntfs_la-mst.lo  (+17 more)
libntfs/.deps/: libntfs_la-acls.Plo  libntfs_la-attrib.Plo  libntfs_la-attrlist.Plo  libntfs_la-bitmap.Plo  libntfs_la-bootsect.Plo  libntfs_la-cache.Plo  libntfs_la-collate.Plo  libntfs_la-compat.Plo  libntfs_la-compress.Plo  libntfs_la-debug.Plo  libntfs_la-device.Plo  libntfs_la-dir.Plo  libntfs_la-ea.Plo  libntfs_la-efs.Plo  libntfs_la-fsck.Plo  libntfs_la-index.Plo  libntfs_la-inode.Plo  libntfs_la-ioctl.Plo  libntfs_la-lcnalloc.Plo  libntfs_la-lib_utils.Plo  libntfs_la-logfile.Plo  libntfs_la-logging.Plo  libntfs_la-mft.Plo  libntfs_la-misc.Plo  libntfs_la-mst.Plo  libntfs_la-object_id.Plo  libntfs_la-problem.Plo  libntfs_la-realpath.Plo  libntfs_la-reparse.Plo  libntfs_la-runlist.Plo  libntfs_la-security.Plo  libntfs_la-unistr.Plo  libntfs_la-unix_io.Plo  libntfs_la-volume.Plo  libntfs_la-xattrs.Plo
libntfs/.libs/: libntfs.lai  libntfs.so.90.0.0
src/: Makefile  Makefile.am  Makefile.in  cluster.c  mkntfs  mkntfs.8  mkntfs.c  ntfsck  ntfsck.8  ntfsck.8.in  ntfsck.c  ntfsclone  ntfsclone.8  ntfsclone.c  ntfscluster  ntfscluster.8.in  ntfscluster.c  ntfsinfo  ntfsinfo.8.in  ntfsinfo.c  ntfslabel  ntfslabel.8.in  ntfslabel.c  ntfsprogs-plus.8  ntfsresize  ntfsresize.8  ntfsresize.c  utils.c  utils.h
src/.deps/: cluster.Po  mkntfs-attrdef.Po  mkntfs-mkntfs.Po  mkntfs-sd.Po  mkntfs-utils.Po  ntfsck.Po  ntfsclone.Po  ntfscluster.Po  ntfsinfo.Po  ntfslabel.Po  ntfsresize.Po  utils.Po
src/.libs/: mkntfs  ntfsck  ntfsclone  ntfscluster  ntfsinfo  ntfslabel  ntfsresize
src/deprecated/: ntfscmp.c
tests/: test_all_images.sh
