
MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

headers = \
	acls.h	\
	attrib.h	\
	attrlist.h	\
	bitmap.h	\
	bootsect.h	\
	cache.h		\
	collate.h	\
	compat.h	\
	compress.h	\
	debug.h		\
	device.h	\
	device_io.h	\
	dir.h		\
	ea.h		\
	efs.h		\
	endians.h	\
	fsck.h		\
	index.h		\
	inode.h		\
	ioctl.h		\
	layout.h	\
	lcnalloc.h	\
	lib_utils.h	\
	logfile.h	\
	logging.h	\
	mft.h		\
	misc.h		\
	mst.h		\
	ntfstime.h	\
	object_id.h	\
	param.h		\
	plugin.h	\
	problem.h	\
	realpath.h	\
	reparse.h	\
	runlist.h	\
	security.h	\
	support.h	\
	types.h		\
	unistr.h	\
	volume.h 	\
	xattrs.h

if INSTALL_LIBRARY
ntfsinclude_HEADERS = $(headers)
else
noinst_HEADERS = $(headers)
endif
